Added a monster and a spell search route.
